--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="E:\Challenge 1\profile photo.png" alt="">
+        <img src="profile photo.png" alt="">
         <h2>Hello.</h2>
         <p>I'm Divesh Sanil. A Computer Engineering student who 🧡 programming and coding.</p>
       </div>
@@ -25,7 +25,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="E:\Challenge 1\code.png" alt="">
+          <img class="" src="code.png" alt="">
           <h3>Web Development</h3>
           <p>Developing webpages with a little edge and styling them according to your own will makes me feel web development a very interesting field and it's one of my many skills.</p>
         </div>
