--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="top-container">
       <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>Divesh Sanil</h1>
-      <h2>I'm a Computer Engineer.</h2>
+      <h2 class="about-me">I'm a Computer Engineer.</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
       <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="profile photo.png" alt="">
+        <img class="profile-photo" src="E:\Challenge 1\profile photo.png" alt="">
         <h2>Hello.</h2>
         <p>I'm Divesh Sanil. A Computer Engineering student who 🧡 programming and coding.</p>
       </div>
@@ -25,7 +25,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="code.png" alt="">
+          <img class="webdevphoto" src="E:\Challenge 1\code.png" alt="">
           <h3>Web Development</h3>
           <p>Developing webpages with a little edge and styling them according to your own will makes me feel web development a very interesting field and it's one of my many skills.</p>
         </div>
@@ -49,7 +49,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/diveshsanil/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2019 Divesh Sanil.</p>
+      <p class="footer-description">© 2019 Divesh Sanil.</p>
     </div>
   </body>
 </html>
